--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0",
-    "swiper": "^8.4.4"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "husky": "^8.0.1",
